--- a/server/app/views/devise/registrations/new.html.erb
+++ b/server/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,10 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :role,
+                required: true %>
+    <%= f.input :phone,
+                required: true %>
   </div>
 
   <div class="form-actions">
