--- a/server/app/views/shelters/show.html.erb
+++ b/server/app/views/shelters/show.html.erb
@@ -70,4 +70,16 @@
   </div>
 <% end %>
 
+<h2>Buscar Animais</h2>
+<%= form_with url: search_shelter_pets_path(@shelter), method: :get, local: true do %>
+  <div class="form-group">
+    <%= label_tag :name, 'Nome do Animal:' %>
+    <%= text_field_tag :name, params[:name], placeholder: 'Digite o nome do animal', class: 'form-control' %>
+  </div>
+  <%= submit_tag 'Buscar', class: 'btn btn-primary' %>
+<% end %>
+
+<!-- Listagem de animais -->
+<%= render 'pets/pets_list', pets: @pets %>
+
 <%= link_to 'Voltar para lista', shelters_path, class: 'btn btn-secondary' %>
