--- a/mobile/src/domain/shelter/components/RegisterShelter/RegisterShelter.css
+++ b/mobile/src/domain/shelter/components/RegisterShelter/RegisterShelter.css
@@ -1,41 +1,34 @@
-.centered-title {
-    text-align: center;
-  }
-
 .cadastro-abrigo {
-    text-align: center;
-    margin:20px;
-    font-size: 25px;
-    font-weight: bold;
+  margin: 20px;
+  font-size: 25px;
+  font-weight: bold;
 }
 
 .header-with-icon {
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-  }
+  display: flex;
+}
 
-  .icon-right {
-    font-size: 30px; /* Adjust the icon size to match the h1 text */
-    color: white; /* Customize the icon color if necessary */
-  }
+.icon-right {
+  font-size: 30px;
+  /* color: white; Customize the icon color if necessary */
+}
 
-  .animal-selection {
-    padding-left: 16px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-    padding-bottom: 20px;
-  }
-  
-  .animal-selection h2 {
-    width: 100%;
-    font-size: 20px;
-    margin-bottom: 1px;
-  }
+.form-list {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
 
-  .large-label {
-    font-size: 14px; /* Adjust the font size as needed */
-    font-weight: bold; /* Optional: Make the font bold */
-    white-space: nowrap; /* Prevent text from wrapping */
-  }
+.animal-selection {
+  padding-left: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  padding-bottom: 20px;
+}
+
+.animal-selection h2 {
+  width: 100%;
+  font-size: 20px;
+  margin-bottom: 1px;
+}
