--- a/mobile/src/domain/dashboard/DashboardPage/DashboardPage.css
+++ b/mobile/src/domain/dashboard/DashboardPage/DashboardPage.css
@@ -8,12 +8,27 @@
     margin: 10px;
   }
 
-  .card {
-    margin-top: 12px;
-    margin-bottom: 10px;
+  .details-button {
+    margin:5px;
   }
 
   h1 {
     text-align: center;
     margin-bottom: 20px;
   }
+
+  .custom-card {
+    border: 2px solid var(--ion-color-primary);
+    background-color: var(--ion-color-dark);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+  }
+  
+  .custom-card-header {
+    color: var(--ion-color-primary); /* Text color using primary */
+  }
+
+  .custom-card-content {
+    margin: 10px;
+  }
+  
