--- a/mobile/src/theme/utils.css
+++ b/mobile/src/theme/utils.css
@@ -2,3 +2,20 @@
   margin: 0 auto;
   max-width: 520px;
 }
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.space-between {
+  justify-content: space-between;
+}
