--- a/mobile/src/domain/shelter/components/ShelterPetsPage/ShelterPetsPage.css
+++ b/mobile/src/domain/shelter/components/ShelterPetsPage/ShelterPetsPage.css
@@ -6,3 +6,11 @@
   align-items: center;
   height: 100%;
 }
+
+.shelter-pet-avatar {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 150px;
+  max-height: 150px;
+}
