--- a/mobile/src/domain/dashboard/DashboardPage/DashboardPage.css
+++ b/mobile/src/domain/dashboard/DashboardPage/DashboardPage.css
@@ -7,20 +7,6 @@
   font-size: 1.6rem;
 }
 
-.details-button {
-  border-radius: 4px;
-  transition:
-    background-color 0.3s,
-    color 0.3s;
-  font-weight: bold;
-}
-
-.details-button:hover {
-  background-color: var(--ion-color-secondary-tint);
-  color: var(--ion-color-light);
-  border: 2px var(--ion-color-secondary);
-}
-
 h1 {
   text-align: center;
   margin-bottom: 20px;
@@ -28,7 +14,7 @@ h1 {
 
 .custom-card {
   border: 3px solid var(--ion-color-primary);
-  box-shadow: var(--ion-box-shadow);
+  /* box-shadow: var(--ion-box-shadow); */
   border-radius: 10px;
 }
 
